--- a/requirements.txt
+++ b/requirements.txt
@@ -6,26 +6,24 @@ streamlit>=1.28.0
 # ============ 数据处理 ============
 pandas>=2.0.0
 numpy>=1.24.0
-openpyxl>=3.1.0          # Excel文件读写
+openpyxl>=3.1.0
 
 # ============ 地理空间处理 ============
 geopandas>=0.14.0
 shapely>=2.0.0
 pyproj>=3.6.0
 fiona>=1.9.0
-rtree>=1.0.0             # 空间索引
+rtree>=1.0.0
+
+# ============ OSM数据获取 ============
+osmnx>=1.9.0              # ← 添加这个！
 
 # ============ 可视化 ============
 plotly>=5.18.0
 
-# ============ MATSim相关（如果需要）============
-lxml>=4.9.0              # XML解析（MATSim路网文件）
-# matsim-tools>=0.0.17   # MATSim Python工具（可选）
-
-# ============ 交通建模（根据实际需要取消注释）============
-# populationsim>=0.5.1   # 人口合成
-# activitysim>=1.2.0     # 活动模拟
-
-# ============ 其他工具 ============
-tqdm>=4.66.0             # 进度条
-pyyaml>=6.0              # YAML配置文件
+# ============ 其他 ============
+lxml>=4.9.0
+tqdm>=4.66.0
+pyyaml>=6.0
+networkx>=3.0            # osmnx 依赖
+requests>=2.31.0         # osmnx 依赖
