--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ pandas>=2.0.0
 numpy>=1.24.0
 openpyxl>=3.1.0
 
+# ============ 科学计算 ============
+scipy>=1.11.0              # ← 添加这个！
+
 # ============ 地理空间处理 ============
 geopandas>=0.14.0
 shapely>=2.0.0
@@ -16,14 +19,15 @@ fiona>=1.9.0
 rtree>=1.0.0
 
 # ============ OSM数据获取 ============
-osmnx>=1.9.0              # ← 添加这个！
+osmnx>=1.9.0
+networkx>=3.0
 
 # ============ 可视化 ============
 plotly>=5.18.0
+matplotlib>=3.7.0          # 可能需要
 
 # ============ 其他 ============
 lxml>=4.9.0
 tqdm>=4.66.0
 pyyaml>=6.0
-networkx>=3.0            # osmnx 依赖
-requests>=2.31.0         # osmnx 依赖
+requests>=2.31.0
